syntax = "proto3";

package product;

service ProductService {
  rpc FindAll (FindAllRequest) returns (ProductsResponse);
  rpc FindOne (FindOneRequest) returns (ProductResponse);
  rpc Create (CreateProductRequest) returns (ProductResponse);
  rpc Update (UpdateProductRequest) returns (ProductResponse);
  rpc Remove (RemoveRequest) returns (ProductResponse);
}

message FindAllRequest {
  optional int32 categoryId = 1;
}

message FindOneRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  optional string description = 2;
  double price = 3;
  optional int32 stock = 4;
  optional int32 categoryId = 5;
}

message UpdateProductRequest {
  int32 id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
  optional int32 stock = 5;
  optional int32 categoryId = 6;
}

message RemoveRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
  double price = 4;
  int32 stock = 5;
  optional int32 categoryId = 6;
  optional CategoryResponse category = 7;
}

message CategoryResponse {
  int32 id = 1;
  string name = 2;
  string slug = 3;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
}
